# arceos

./: .gitignore  CONTRIBUTE.md  Cargo.toml  README.md  lib.excalidraw  linux_abi.sh  loader_lib.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ld.yml
examples/loader/: Cargo.toml
examples/loader/abi_macro/: Cargo.toml
examples/loader/abi_macro/core/: Cargo.toml
examples/loader/abi_macro/core/src/: abi.rs  lib.rs
examples/loader/abi_macro/core/tests/: abi_macro_test.rs
examples/loader/abi_macro/core/tests/snapshots/: abi_macro_test__abi_macro_basic.snap
examples/loader/abi_macro/src/: lib.rs
examples/loader/src/: config.rs  elf.rs  fs.rs  load.rs  main.rs
examples/loader/src/abi/: env.rs  fcntl.rs  fenv.rs  init.rs  mem.rs  mod.rs  process.rs  setjmp.rs  string.rs  thread.rs  time.rs  unistd.rs
examples/loader/src/arch/: mod.rs
examples/loader/src/arch/riscv64/: mod.rs
examples/loader/src/config/: mod.rs
examples/loader/src/elf/: auxv.rs  elf.rs  mod.rs
examples/loader/src/futex/: futex.rs  mod.rs  queues.rs
examples/loader/src/io/: impls.rs  mod.rs
examples/loader/src/io/buffered/: bufreader.rs
examples/loader/src/mem/: area.rs  mod.rs  page.rs  set.rs
examples/loader/src/process/: api.rs  fd_manager.rs  flags.rs  futex.rs  link.rs  mod.rs  process.rs  signal.rs  stdio.rs  task_ext.rs
examples/loader/src/signal/: action.rs  info.rs  mod.rs
examples/loader/src/signal/ucontext/: mod.rs
examples/loader/src/task/: api.rs  api_s.rs  mod.rs  processor.rs  schedule.rs  task.rs
examples/loader/src/taskctx/: current.rs  kstack.rs  mod.rs  task.rs  tls.rs
examples/loader/src/taskctx/arch/: aarch64.rs  riscv.rs  x86_64.rs
examples/loader_lib/: Cargo.toml
examples/loader_lib/src/: config.rs  elf.rs  init.rs  load.rs  main.rs
examples/loader_lib/src/abi/: file.rs  mem.rs  mod.rs  noimpl.rs  syscall.rs  thread.rs
examples/loader_lib/src/elf_dev/: mod.rs
examples/loader_lib/src/linux_env/: mod.rs
examples/loader_lib/src/linux_env/axfs_ext/api/: mod.rs  port.rs
examples/loader_lib/src/linux_env/axhal_ext/: mod.rs
examples/loader_lib/src/linux_env/axhal_ext/riscv64_qemu_virt/: console.rs
examples/loader_lib/src/linux_env/linux_fs/: api.rs  config.rs  fd_manager.rs  futex.rs  link.rs  mod.rs  process.rs  stdio.rs  utils.rs
examples/loader_lib/src/linux_env/process_ext/: api.rs  flags.rs  mod.rs  process.rs
examples/loader_lib/src/runtime_func/: mod.rs  rt_float.rs  rt_integer.rs
examples/loader_lib/src/syscall/: api.rs  ctypes.rs  mod.rs  syscall.rs
examples/loader_lib/src/syscall/syscall_fs/: fs_syscall_id.rs  mod.rs
examples/loader_lib/src/syscall/syscall_fs/ctype/: dir.rs  epoll.rs  file.rs  mod.rs  mount.rs
examples/loader_lib/src/syscall/syscall_fs/imp/: ctl.rs  epoll.rs  eventfd.rs  io.rs  link.rs  mod.rs  mount.rs  poll.rs  stat.rs
examples/loader_lib/src/syscall/syscall_mem/: imp.rs  mem_syscall_id.rs  mod.rs
examples/loader_lib/src/syscall/syscall_task/: mod.rs  task_syscall_id.rs
examples/loader_lib/src/syscall/syscall_task/imp/: futex.rs  mod.rs  schedule.rs  signal.rs  task.rs  utils.rs
mockc_apps/: .~lock.sql_std_support_rate.ods#  Makefile  link.ld  size.sh  sql_std_support_rate.ods  sqlite_std.md  syscall_checklist.md
mockc_apps/complex/: Makefile  complex.c
mockc_apps/ctype/: Makefile  ctype.c
mockc_apps/errno/: Makefile  errno.c  log
mockc_apps/fcntl/: Makefile  fcntl.c
mockc_apps/fctrl/: Makefile  fctrl.c
mockc_apps/file_opers/: Makefile  file_opers.c
mockc_apps/hello/: Makefile  hello.c
mockc_apps/malloc/: Makefile  malloc.c
mockc_apps/malloc2/: Makefile  a.out  malloc2.c
mockc_apps/math/: Makefile  math.c
mockc_apps/pthread/: Makefile  log  pthread.c
mockc_apps/sqlite3/: Makefile  link.ld
mockc_apps/stdio_file/: Makefile  stdio_file.c
mockc_apps/stdio_io/: Makefile  stdio_io.c
mockc_apps/string/: Makefile  string.c
mockc_apps/task/: Makefile  task.c
modules/axfs/: Cargo.toml
modules/axfs/src/: dev.rs  fops.rs  lib.rs  root.rs
modules/axfs/src/api/: file.rs  mod.rs  port.rs
modules/axfs/src/fs/: ext4.rs  fatfs.rs  mod.rs
modules/axhal/: linker.lds.S
modules/axhal/src/: mem.rs
modules/axmm/src/: aspace.rs  lib.rs
modules/axtask/src/: api.rs  run_queue.rs  task.rs
payload/: .gitignore
payload/file_app/: config.toml
payload/fork_app/: config.toml  fork  fork.c  printf
payload/fork_app/snapshot/: build@fork_dynamic.S.snap  build@fork_dynamic.S.snap.new  build@fork_dynamic.dump.snap  build@fork_dynamic.dump.snap.new  build@fork_dynamic.elf.snap  build@fork_dynamic.elf.snap.new  build@printf_dynamic.S.snap  build@printf_dynamic.dump.snap  build@printf_dynamic.elf.snap
payload/hello_app/: build.py  config.toml  hello  hello.c  linker.ld  mocklibc.h  run_test.sh
payload/hello_app/snapshot/: build@hello_dynamic.S.snap  build@hello_dynamic.S.snap.new  build@hello_dynamic.dump.snap  build@hello_dynamic.dump.snap.new  build@hello_dynamic.elf.snap  build@hello_dynamic.elf.snap.new  build@hello_static.S.snap  build@hello_static.dump.snap  build@hello_static.elf.snap
payload/malloc_app/: config.toml  malloc  malloc.c
payload/malloc_app/snapshot/: build@malloc_dynamic.S.snap  build@malloc_dynamic.S.snap.new  build@malloc_dynamic.dump.snap  build@malloc_dynamic.dump.snap.new  build@malloc_dynamic.elf.snap  build@malloc_dynamic.elf.snap.new
payload/mutex_app/: config.toml  mutex  mutex.c
payload/mutex_app/snapshot/: build@mutex_dynamic.S.snap  build@mutex_dynamic.S.snap.new  build@mutex_dynamic.dump.snap  build@mutex_dynamic.dump.snap.new  build@mutex_dynamic.elf.snap  build@mutex_dynamic.elf.snap.new
payload/printf_app/: build.py  config.toml  printf  printf.c  run_test.sh
payload/printf_app/snapshot/: build@printf_dynamic.S.snap  (+5 more)
payload/pthread_app/: config.toml  pthread  pthread.c  run_test.sh
payload/sqlite_app/: config.toml  main.c
payload/test_app/: config.toml  test  test.c
scripts/make/: qemu.mk
ulib/mocklibc_lib/: Makefile  config.mk  link.ld
xtask/: .gitignore  Cargo.toml
xtask/src/: main.rs
(+585 files in other folders)
