[package]
name = "arceos-loader"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axlog = { workspace = true }
axstd = { workspace = true }
axtask = { workspace = true }
arceos_posix_api = { workspace = true, features = ["multitask", "alloc"] }
elf = { git = "https://github.com/cole14/rust-elf/", commit = "cdc6769", default-features = false, features = ["to_str"] }
printf-compat = { version = "0.1.0", default-features = false }
axhal = { workspace = true, features = ["paging"] }
page_table_multiarch = { version = "0.5", optional = true }

[features]
