[package]
name = "axfs"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS filesystem module"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axfs"
documentation = "https://arceos-org.github.io/arceos/axfs/index.html"

[features]
devfs = ["dep:axfs_devfs"]
ramfs = ["dep:axfs_ramfs"]
procfs = ["dep:axfs_ramfs"]
sysfs = ["dep:axfs_ramfs"]
fatfs = ["dep:fatfs"]
myfs = ["dep:crate_interface"]
use-ramdisk = []

ext4_rs = ["dep:ext4_rs", "devfs", "ramfs", "procfs", "sysfs"]
ext4fs = ["dep:lwext4_rust", "devfs", "ramfs", "procfs", "sysfs",]
default = ["devfs", "ramfs", "fatfs", "procfs", "sysfs"]

[dependencies]
log = "=0.4.21"
cfg-if = "1.0"
lazyinit = "0.2"
cap_access = "0.1"
axio = { version = "0.1", features = ["alloc"] }
axerrno = "0.1"
axfs_vfs = "0.1"
axfs_devfs = { version = "0.1", optional = true }
axfs_ramfs = { version = "0.1", optional = true }
crate_interface = { version = "0.1", optional = true }
axsync = { workspace = true }
axdriver = { workspace = true, features = ["block"] }
axdriver_block = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.0" }

ext4_rs = { git = "https://github.com/yuoo655/ext4_rs.git", rev= "6bcc7f5", optional = true }
lwext4_rust = { git = "https://github.com/elliott10/lwext4_rust.git", rev = "f3048f87", optional = true }

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "85f06e0"
optional = true
default-features = false
features = [ # no std
    "alloc",
    "lfn",
    "log_level_trace",
    "unicode",
]

[dev-dependencies]
axdriver = { workspace = true, features = ["block", "ramdisk"] }
axdriver_block = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.0", features = ["ramdisk"] }
axsync = { workspace = true, features = ["multitask"] }
axtask = { workspace = true, features = ["test"] }
